# LLM1

./: .env  docker-compose.yml  pyproject.toml
LLM/: Dockerfile  README.md
LLM/app/: main.py
LLM/app/api/: deps.py
LLM/app/api/routes/: auth.py  course.py  lesson.py  users.py
LLM/app/core/: config.py  database.py  email.py  security.py
LLM/app/crud/: course.py  lesson.py  user.py
LLM/app/models/: __init__.py  course.py  user.py
LLM/app/schemas/: course.py  user.py
